# YahooFinanceWebScrape

./: main.py  pyproject.toml  stock codes.txt  stock information
