[tool.poetry]
name = "yahoofinancewebscrape"
version = "0.1.0"
description = ""
authors = ["chaiminghao <chaiminghao69@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
